--- a/Makefile.in
+++ b/Makefile.in
@@ -7,72 +7,51 @@
 #	replaced in the actual Makefile.
 #
 # Copyright (c) 1999 Scriptics Corporation.
-# Copyright (c) 2002 ActiveState Corporation.
+# Copyright (c) 2002-2004 ActiveState Corporation.
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.22 2002/04/05 17:26:05 hobbs Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.23 2004/08/10 20:58:44 hobbs Exp $
 
 #========================================================================
-# Edit the following few lines when writing a new extension
-#========================================================================
-
-#========================================================================
-# Enumerate the names of the source files included in this package.
+# The names of the source files is defined in the configure script.
+# The object files are used for linking into the final library.
 # This will be used when a dist target is added to the Makefile.
+# It is not important to specify the directory, as long as it is the
+# $(srcdir) or in the generic, win or unix subdirectory.
 #========================================================================
 
-WIN_DIR		= $(srcdir)/win
-UNIX_DIR	= $(srcdir)/unix
-GENERIC_DIR	= $(srcdir)/generic
-PLATFORM_DIR	= @PLATFORM_DIR@
+PKG_SOURCES	= @PKG_SOURCES@
+PKG_OBJECTS	= @PKG_OBJECTS@
 
-WIN_SOURCES	= $(PLATFORM_DIR)/tclAppInit.c $(PLATFORM_DIR)/dllEntryPoint.c
-UNIX_SOURCES	= $(PLATFORM_DIR)/tclAppInit.c
-
-itk_SOURCES	= $(GENERIC_DIR)/itk_cmds.c \
-	$(GENERIC_DIR)/itk_option.c \
-	$(GENERIC_DIR)/itk_archetype.c \
-	$(GENERIC_DIR)/itk_util.c \
-	$(GENERIC_DIR)/itkStubInit.c \
-	$(GENERIC_DIR)/itkStubLib.c \
-	@PLATFORM_SOURCES@
+PKG_STUB_SOURCES = @PKG_STUB_SOURCES@
+PKG_STUB_OBJECTS = @PKG_STUB_OBJECTS@
 
 #========================================================================
-# Enumerate the names of the object files included in this package.
-# These objects are created and linked into the final library.  In
-# most cases these object files will correspond to the source files
-# above.
-#
-# "sample_LIB_FILE" refers to the library (dynamic or static as per
-# configuration options) composed of the named objects.
+# PKG_TCL_SOURCES identifies Tcl runtime files that are associated with
+# this package that need to be installed, if any.
 #========================================================================
 
-WIN_OBJECTS	= dllEntryPoint.$(OBJEXT)
-UNIX_OBJECTS	=
+PKG_TCL_SOURCES = @PKG_TCL_SOURCES@
 
-itk_OBJECTS	= itk_cmds.$(OBJEXT) \
-	itk_option.$(OBJEXT) \
-	itk_archetype.$(OBJEXT) \
-	itk_util.$(OBJEXT) \
-	itkStubInit.$(OBJEXT) \
-	itkStubLib.$(OBJEXT) \
-	@PLATFORM_OBJECTS@
+#========================================================================
+# This is a list of header files to be installed
+# itk.h includes itclInt.h, which needs itclIntDecls.h,
+# so we must install them.
+#========================================================================
 
-itkstub_OBJECTS	= itkStubLib.$(OBJEXT)
+PKG_HEADERS	= @PKG_HEADERS@
+
+#========================================================================
+# Nothing of the variables below this line should need to be changed.
+# Please check the TARGETS section below to make sure the make targets
+# are correct.
+#========================================================================
 
 itk_LIB_FILE	= @itk_LIB_FILE@
 itkstub_LIB_FILE = @itkstub_LIB_FILE@
 itclstub_LIB_FILE = @itclstub_LIB_FILE@
-
-#========================================================================
-# This is a list of header files to be installed
-#========================================================================
-
-GENERIC_HDRS	= \
-	$(srcdir)/generic/itk.h \
-	$(srcdir)/generic/itkDecls.h
 
 #========================================================================
 # Add additional lines to handle any additional AC_SUBST cases that
@@ -95,13 +74,15 @@ ITK_WIN_DIR_NATIVE	= @ITK_WIN_DIR_NATIVE@
 # library that we are building.
 #========================================================================
 
-lib_BINARIES	= $($(PACKAGE)_LIB_FILE) $($(PACKAGE)stub_LIB_FILE)
+PKG_LIB_FILE	= @PKG_LIB_FILE@
+PKG_STUB_LIB_FILE = @PKG_STUB_LIB_FILE@
+
+lib_BINARIES	= $(PKG_LIB_FILE)
 BINARIES	= $(lib_BINARIES)
 
 SHELL		= @SHELL@
 
 srcdir		= @srcdir@
-top_srcdir	= @top_srcdir@
 prefix		= @prefix@
 exec_prefix	= @exec_prefix@
 
@@ -113,7 +94,7 @@ includedir	= @includedir@
 
 DESTDIR		=
 
-PKG_DIR		= $(PACKAGE)$(VERSION)
+PKG_DIR		= $(PACKAGE_NAME)$(PACKAGE_VERSION)
 pkgdatadir	= $(datadir)/$(PKG_DIR)
 pkglibdir	= $(libdir)/$(PKG_DIR)
 pkgincludedir	= $(includedir)/$(PKG_DIR)
@@ -125,26 +106,24 @@ INSTALL_PROGRAM	= @INSTALL_PROGRAM@
 INSTALL_DATA	= @INSTALL_DATA@
 INSTALL_SCRIPT	= @INSTALL_SCRIPT@
 
-PACKAGE		= @PACKAGE@
-VERSION		= @VERSION@
+PACKAGE_NAME	= @PACKAGE_NAME@
+PACKAGE_VERSION	= @PACKAGE_VERSION@
 CC		= @CC@
-CFLAGS_DEBUG	= @CFLAGS_DEBUG@
 CFLAGS_DEFAULT	= @CFLAGS_DEFAULT@
-CFLAGS_OPTIMIZE	= @CFLAGS_OPTIMIZE@
+CFLAGS_WARNING	= @CFLAGS_WARNING@
 CLEANFILES	= @CLEANFILES@
 EXEEXT		= @EXEEXT@
-LDFLAGS_DEBUG	= @LDFLAGS_DEBUG@
 LDFLAGS_DEFAULT	= @LDFLAGS_DEFAULT@
-LDFLAGS_OPTIMIZE = @LDFLAGS_OPTIMIZE@
 MAKE_LIB	= @MAKE_LIB@
 MAKE_SHARED_LIB	= @MAKE_SHARED_LIB@
 MAKE_STATIC_LIB	= @MAKE_STATIC_LIB@
 MAKE_STUB_LIB	= @MAKE_STUB_LIB@
 OBJEXT		= @OBJEXT@
 RANLIB		= @RANLIB@
+RANLIB_STUB	= @RANLIB_STUB@
 SHLIB_CFLAGS	= @SHLIB_CFLAGS@
 SHLIB_LD	= @SHLIB_LD@
-SHLIB_LDFLAGS	= @SHLIB_LDFLAGS@
+SHLIB_LD_FLAGS	= @SHLIB_LD_FLAGS@
 SHLIB_LD_LIBS	= @SHLIB_LD_LIBS@
 STLIB_LD	= @STLIB_LD@
 TCL_DEFS	= @TCL_DEFS@
@@ -152,15 +131,12 @@ TCL_BIN_DIR	= @TCL_BIN_DIR@
 TCL_SRC_DIR	= @TCL_SRC_DIR@
 TK_SRC_DIR	= @TK_SRC_DIR@
 TK_BIN_DIR	= @TK_BIN_DIR@
+# This is necessary for packages that use private headers
 TCL_TOP_DIR_NATIVE = @TCL_TOP_DIR_NATIVE@
 TK_TOP_DIR_NATIVE = @TK_TOP_DIR_NATIVE@
 
 # Not used, but retained for reference of what libs Tcl required
 TCL_LIBS	= @TCL_LIBS@
-
-TK_XINCLUDES = @TK_XINCLUDES@
-TCL_INCLUDES = @TCL_INCLUDES@
-TK_INCLUDES = @TK_INCLUDES@
 
 #========================================================================
 # TCLLIBPATH seeds the auto_path in Tcl's init.tcl so we can test our
@@ -174,9 +150,7 @@ TCLSH_ENV	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
 		  TK_LIBRARY=`@CYGPATH@ $(TK_SRC_DIR)/library` \
 		  ITCL_LIBRARY=`@CYGPATH@ @itcl_SRC_DIR@/library` \
 		  ITK_LIBRARY=`@CYGPATH@ $(srcdir)/library` \
-		  LD_LIBRARY_PATH="$(EXTRA_PATH):$(LD_LIBRARY_PATH)" \
-		  LIBPATH="$(EXTRA_PATH):${LIBPATH}" \
-		  SHLIB_PATH="$(EXTRA_PATH):${SHLIB_PATH}" \
+		  @LD_LIBRARY_PATH_VAR@="$(EXTRA_PATH):$(@LD_LIBRARY_PATH_VAR@)" \
 		  PATH="$(EXTRA_PATH):$(PATH)" \
 		  TCLLIBPATH="$(top_builddir) $(top_builddir)/../itcl"
 TCLSH_PROG	= @TCLSH_PROG@
@@ -184,19 +158,17 @@ WISH_PROG	= @WISH_PROG@
 TCLSH		= $(TCLSH_ENV) $(TCLSH_PROG)
 WISH		= $(TCLSH_ENV) $(WISH_PROG)
 
-ITCL_INCLUDES	= @ITCL_INCLUDES@
-ITK_INCLUDES	= @ITCL_INCLUDES@ @ITK_INCLUDES@ @TK_XINCLUDES@
-INCLUDES	= @TCL_INCLUDES@ @TK_INCLUDES@ $(ITK_INCLUDES)
+INCLUDES	= @PKG_INCLUDES@ @TCL_INCLUDES@ @TK_INCLUDES@ @TK_XINCLUDES@
 
-EXTRA_CFLAGS	= $(AC_FLAGS) $(MEM_DEBUG_FLAGS) @EXTRA_CFLAGS@
+PKG_CFLAGS	= @PKG_CFLAGS@
 
-DEFS		= @DEFS@ $(TCL_DEFS) $(EXTRA_CFLAGS) \
+DEFS		= @DEFS@ $(PKG_CFLAGS) \
 		  -DITK_LIBRARY=\"$(pkglibdir)\" -DUSE_NON_CONST
 
 CONFIG_CLEAN_FILES = Makefile
 
 CPPFLAGS	= @CPPFLAGS@
-LIBS		= @LIBS@
+LIBS		= @PKG_LIBS@ @LIBS@
 AR		= ar
 CFLAGS		= @CFLAGS@
 COMPILE		= $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -239,15 +211,9 @@ install-binaries: binaries install-lib-binaries install-bin-binaries
 install-libraries: libraries
 	@mkdir -p $(DESTDIR)$(includedir)
 	@echo "Installing header files in $(DESTDIR)$(includedir)"
-	@for i in $(GENERIC_HDRS) ; do \
-	    echo "Installing $$i" ; \
-	    $(INSTALL_DATA) $$i $(DESTDIR)$(includedir) ; \
-	done;
-	@mkdir -p $(DESTDIR)$(pkglibdir)
-	@echo "Installing library files in $(DESTDIR)$(pkglibdir)"
-	@for i in $(srcdir)/library/*.* $(srcdir)/library/tclIndex ; do \
-	    echo "Installing $$i" ; \
-	    $(INSTALL_DATA) $$i $(DESTDIR)$(pkglibdir) ; \
+	@list='$(PKG_HEADERS)'; for i in $$list; do \
+	    echo "Installing $(srcdir)/$$i" ; \
+	    $(INSTALL_DATA) $(srcdir)/$$i $(DESTDIR)$(includedir) ; \
 	done;
 
 #========================================================================
@@ -276,28 +242,24 @@ gdb:
 depend:
 
 #========================================================================
-# Enumerate the names of the object files included in this package.
-# These objects are created and linked into the final library.  In
-# most cases these object files will correspond to the source files
-# above.
+# $(PKG_LIB_FILE) should be listed as part of the BINARIES variable
+# mentioned above.  That will ensure that this target is built when you
+# run "make binaries".
 #
-# $(exampleA_LIB_FILE) should be listed as part of the BINARIES variable
-# at the top of the Makefile.  That will ensure that this target is built
-# when you run "make binaries".
-#
-# You shouldn't need to modify this target, except to change the package
-# name from "exampleA" to your package's name.
+# The $(PKG_OBJECTS) objects are created and linked into the final
+# library.  In most cases these object files will correspond to the
+# source files above.
 #========================================================================
 
-$($(PACKAGE)_LIB_FILE): $($(PACKAGE)_OBJECTS)
-	-rm -f $($(PACKAGE)_LIB_FILE)
+$(PKG_LIB_FILE): $(PKG_OBJECTS)
+	-rm -f $(PKG_LIB_FILE)
 	${MAKE_LIB}
-	$(RANLIB) $($(PACKAGE)_LIB_FILE)
+	$(RANLIB) $(PKG_LIB_FILE)
 
-$($(PACKAGE)stub_LIB_FILE): $($(PACKAGE)stub_OBJECTS)
-	-rm -f $($(PACKAGE)stub_LIB_FILE)
+$(PKG_STUB_LIB_FILE): $(PKG_STUB_OBJECTS)
+	-rm -f $(PKG_STUB_LIB_FILE)
 	${MAKE_STUB_LIB}
-	$(RANLIB) $($(PACKAGE)stub_LIB_FILE)
+	$(RANLIB_STUB) $(PKG_STUB_LIB_FILE)
 
 #========================================================================
 # We need to enumerate the list of .c to .o lines here.
@@ -314,10 +276,7 @@ $($(PACKAGE)stub_LIB_FILE): $($(PACKAGE)stub_OBJECTS)
 # As necessary, add $(srcdir):$(srcdir)/compat:....
 #========================================================================
 
-VPATH = $(srcdir)/generic:$(PLATFORM_DIR)
-
-dllEntryPoint.$(OBJEXT): $(WIN_DIR)/dllEntryPoint.c
-	$(COMPILE) -c `@CYGPATH@ $(WIN_DIR)/dllEntryPoint.c` -o $@
+VPATH = $(srcdir)/generic:$(srcdir)/win:$(srcdir)/unix
 
 .c.$(OBJEXT):
 	$(COMPILE) -c `@CYGPATH@ $<` -o $@
@@ -360,8 +319,14 @@ install-lib-binaries:
 	  if test -f $$p; then \
 	    echo " $(INSTALL_PROGRAM) $$p $(DESTDIR)$(pkglibdir)/$$p"; \
 	    $(INSTALL_PROGRAM) $$p $(DESTDIR)$(pkglibdir)/$$p; \
-	    echo " $(RANLIB) $(DESTDIR)$(pkglibdir)/$$p"; \
-	    $(RANLIB) $(DESTDIR)$(pkglibdir)/$$p; \
+	    stub=`echo $$p|sed -e "s/.*\(stub\).*/\1/"`; \
+	    if test "x$$stub" = "xstub"; then \
+		echo " $(RANLIB_STUB) $(DESTDIR)$(pkglibdir)/$$p"; \
+		$(RANLIB_STUB) $(DESTDIR)$(pkglibdir)/$$p; \
+	    else \
+		echo " $(RANLIB) $(DESTDIR)$(pkglibdir)/$$p"; \
+		$(RANLIB) $(DESTDIR)$(pkglibdir)/$$p; \
+	    fi; \
 	    ext=`echo $$p|sed -e "s/.*\.//"`; \
 	    if test "x$$ext" = "xdll"; then \
 		lib=`basename $$p|sed -e 's/.[^.]*$$//'`.lib; \
@@ -370,6 +335,13 @@ install-lib-binaries:
 	            $(INSTALL_DATA) $$lib $(DESTDIR)$(pkglibdir)/$$lib; \
 		fi; \
 	    fi; \
+	  fi; \
+	done
+	@list='$(PKG_TCL_SOURCES)'; for p in $$list; do \
+	  if test -f $(srcdir)/$$p; then \
+	    destp=`basename $$p`; \
+	    echo " Install $$destp $(DESTDIR)$(pkglibdir)/$$destp"; \
+	    $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(pkglibdir)/$$destp; \
 	  fi; \
 	done
 	$(INSTALL_DATA) pkgIndex.tcl $(DESTDIR)$(pkglibdir)
@@ -397,8 +369,12 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
 uninstall-binaries:
-	list='$(BINARIES)'; for p in $$list; do \
-	  rm -f $(DESTDIR)$(libdir)/$$p; \
+	list='$(lib_BINARIES)'; for p in $$list; do \
+	  rm -f $(DESTDIR)$(pkglibdir)/$$p; \
+	done
+	list='$(PKG_TCL_SOURCES)'; for p in $$list; do \
+	  p=`basename $$p`; \
+	  rm -f $(DESTDIR)$(pkglibdir)/$$p; \
 	done
 	list='$(bin_BINARIES)'; for p in $$list; do \
 	  rm -f $(DESTDIR)$(bindir)/$$p; \
