--- a/configure.in
+++ b/configure.in
@@ -4,51 +4,23 @@
 # need to modify this file are marked by the string __CHANGE__
 #--------------------------------------------------------------------
 
-#--------------------------------------------------------------------
-# __CHANGE__
-# This very first macro is used to verify that the configure script can 
-# find the sources.  The argument to AC_INIT should be a unique filename
-# for this package, and can be a relative path, such as:
-#
-# AC_INIT(../generic/tcl.h)
-#--------------------------------------------------------------------
+#-----------------------------------------------------------------------
+# This initializes the environment with PACKAGE_NAME and PACKAGE_VERSION
+# set as provided.  These will also be added as -D defs in your Makefile
+# so you can encode the package version directly into the source files.
+#-----------------------------------------------------------------------
 
-AC_INIT(generic/itk.h)
-AC_CONFIG_AUX_DIR(../config)
+AC_INIT([itk], [3.3])
 
 #--------------------------------------------------------------------
-# __CHANGE__
-# Set your package name and version numbers here.  The NODOT_VERSION is
-# required for constructing the library name on systems that don't like
-# dots in library names (Windows).  The VERSION variable is used on the
-# other systems.
+# Call TEA_INIT as the first TEA_ macro to set up initial vars.
+# This will define a ${TEA_PLATFORM} variable == "unix" or "windows"
+# as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
 #--------------------------------------------------------------------
 
-PACKAGE=itk
+TEA_INIT([3.1])
 
-MAJOR_VERSION=3
-MINOR_VERSION=3
-PATCHLEVEL=.0
-
-VERSION=${MAJOR_VERSION}.${MINOR_VERSION}
-NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}
-
-AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
-
-#--------------------------------------------------------------------
-# We put this here so that you can compile with -DVERSION="1.2" to
-# encode the package version directly into the source files.
-#--------------------------------------------------------------------
-
-eval AC_DEFINE_UNQUOTED(VERSION, "${VERSION}")
-
-#--------------------------------------------------------------------
-# Call TEA_TEA_INIT as the first TEA_ macro to set up initial vars
-# This will define a ${TEA_PLATFORM} variable == "unix" or "windows".
-#--------------------------------------------------------------------
-
-TEA_INIT
+AC_CONFIG_AUX_DIR(../tclconfig)
 
 #--------------------------------------------------------------------
 # Load the tclConfig.sh file
@@ -56,6 +28,26 @@ TEA_INIT
 
 TEA_PATH_TCLCONFIG
 TEA_LOAD_TCLCONFIG
+
+#--------------------------------------------------------------------
+# Load the tkConfig.sh file
+#--------------------------------------------------------------------
+
+TEA_PATH_TKCONFIG
+TEA_LOAD_TKCONFIG
+
+TEA_PATH_CONFIG(itcl)
+TEA_LOAD_CONFIG(itcl)
+
+AC_ARG_WITH(itcl,
+	[  --with-itclinclude=DIR          use Itcl headers from DIR],
+	ITCL_LIB_DIR=$withval, ITCL_LIB_DIR=${itcl_SRC_DIR})
+
+if test ! -r "${ITCL_LIB_DIR}/generic/itclInt.h" ; then
+    AC_MSG_ERROR([Cannot find Itcl private header files.  Use --with-itclinclude to specify the directory containing the Itcl private headers on your system.])
+fi
+
+ITCL_INCLUDES="-I\"`${CYGPATH} ${ITCL_LIB_DIR}/generic`\""
 
 #--------------------------------------------------------------------
 # Handle the --prefix=... option by defaulting to what Tcl gave.
@@ -73,63 +65,31 @@ TEA_PREFIX
 
 TEA_SETUP_COMPILER
 
-#--------------------------------------------------------------------
-# Includes for this package
-#--------------------------------------------------------------------
-
-ITK_GENERIC_DIR_NATIVE=`${CYGPATH} ${srcdir}/generic`
-ITK_WIN_DIR_NATIVE=`${CYGPATH} ${srcdir}/win`
-ITK_UNIX_DIR_NATIVE=`${CYGPATH} ${srcdir}/unix`
-
-if test "${TEA_PLATFORM}" = "windows" ; then
-    ITK_PLATFORM_DIR_NATIVE=${ITK_WIN_DIR_NATIVE}
-else
-    ITK_PLATFORM_DIR_NATIVE=${ITK_UNIX_DIR_NATIVE}
-fi
-
-ITK_INCLUDES="-I\"${ITK_GENERIC_DIR_NATIVE}\" -I\"${ITK_PLATFORM_DIR_NATIVE}\""
-
-AC_SUBST(ITK_GENERIC_DIR_NATIVE)
-AC_SUBST(ITK_WIN_DIR_NATIVE)
-AC_SUBST(ITK_UNIX_DIR_NATIVE)
-AC_SUBST(ITK_INCLUDES)
-
-#--------------------------------------------------------------------
-# Load the tkConfig.sh file
-#--------------------------------------------------------------------
-
-TEA_PATH_TKCONFIG
-TEA_LOAD_TKCONFIG
-
-TEA_PATH_CONFIG(itcl)
-TEA_LOAD_CONFIG(itcl)
-
-AC_ARG_WITH(itcl, [  --with-itclinclude=DIR          use Itcl headers from DIR],
-        ITCL_LIB_DIR=$withval, ITCL_LIB_DIR=${itcl_SRC_DIR})
-
-if test ! -r "${ITCL_LIB_DIR}/generic/itclInt.h" ; then
-    AC_MSG_ERROR([Cannot find Itcl private header files.  Use --with-itclinclude to specify the directory containing the Itcl private headers on your system.])
-fi
-
-ITCL_INCLUDES=-I\"`${CYGPATH} ${ITCL_LIB_DIR}/generic`\"
-AC_SUBST(ITCL_INCLUDES)
-
-#--------------------------------------------------------------------
+#-----------------------------------------------------------------------
 # __CHANGE__
-# Choose which headers you need.  Extension authors should try very
-# hard to only rely on the Tcl public header files.  Internal headers
-# contain private data structures and are subject to change without
-# notice.
-# This must be done AFTER calling TEA_PATH_TCLCONFIG/TEA_LOAD_TCLCONFIG
-# so that we can extract TCL_SRC_DIR from the config file (in the case
-# of private headers
-#--------------------------------------------------------------------
+# Specify the C source files to compile in TEA_ADD_SOURCES,
+# public headers that need to be installed in TEA_ADD_HEADERS,
+# stub library C source files to compile in TEA_ADD_STUB_SOURCES,
+# and runtime Tcl library files in TEA_ADD_TCL_SOURCES.
+# This defines PKG(_STUB)_SOURCES, PKG(_STUB)_OBJECTS, PKG_HEADERS
+# and PKG_TCL_SOURCES.
+#-----------------------------------------------------------------------
 
-#TEA_PUBLIC_TCL_HEADERS
-TEA_PRIVATE_TCL_HEADERS
-
-#TEA_PUBLIC_TK_HEADERS
-TEA_PRIVATE_TK_HEADERS
+TEA_ADD_SOURCES([itk_cmds.c
+		itk_option.c
+		itk_archetype.c
+		itk_util.c
+		itkStubInit.c])
+TEA_ADD_HEADERS([generic/itk.h generic/itkDecls.h])
+TEA_ADD_INCLUDES([${ITCL_INCLUDES} -I\"`${CYGPATH} ${srcdir}/generic`\"])
+TEA_ADD_LIBS([])
+TEA_ADD_CFLAGS([])
+#TEA_ADD_STUB_SOURCES([itkStubLib.c])
+TEA_ADD_TCL_SOURCES([library/Archetype.itk
+		library/Toplevel.itk
+		library/Widget.itk
+		library/itk.tcl
+		library/tclIndex])
 
 #--------------------------------------------------------------------
 # __CHANGE__
@@ -151,20 +111,35 @@ TEA_PRIVATE_TK_HEADERS
 if test "${TEA_PLATFORM}" = "windows" ; then
     AC_DEFINE(BUILD_itk)
     CLEANFILES="*.lib *.dll *.exp *.ilk *.pdb vc*.pch"
-    PLATFORM_SOURCES='$(WIN_SOURCES)'
-    PLATFORM_OBJECTS='$(WIN_OBJECTS)'
-    PLATFORM_DIR='$(WIN_DIR)'
+    TEA_ADD_SOURCES([dllEntryPoint.c])
 else
     CLEANFILES=
-    PLATFORM_SOURCES='$(UNIX_SOURCES)'
-    PLATFORM_OBJECTS='$(UNIX_OBJECTS)'
-    PLATFORM_DIR='$(UNIX_DIR)'
 fi
 
 AC_SUBST(CLEANFILES)
-AC_SUBST(PLATFORM_SOURCES)
-AC_SUBST(PLATFORM_OBJECTS)
-AC_SUBST(PLATFORM_DIR)
+
+#--------------------------------------------------------------------
+# __CHANGE__
+# Choose which headers you need.  Extension authors should try very
+# hard to only rely on the Tcl public header files.  Internal headers
+# contain private data structures and are subject to change without
+# notice.
+# This must be done AFTER calling TEA_PATH_TCLCONFIG/TEA_LOAD_TCLCONFIG
+# so that we can extract TCL_SRC_DIR from the config file (in the case
+# of private headers
+#--------------------------------------------------------------------
+
+#TEA_PUBLIC_TCL_HEADERS
+TEA_PRIVATE_TCL_HEADERS
+
+#TEA_PUBLIC_TK_HEADERS
+TEA_PRIVATE_TK_HEADERS
+
+#--------------------------------------------------------------------
+# For Unix/Tk builds, make sure that the X libraries/headers are found.
+#--------------------------------------------------------------------
+
+TEA_PATH_X
 
 #--------------------------------------------------------------------
 # We need to enable the threading macros found in tcl.h and tclInt.h.
@@ -174,6 +149,12 @@ AC_SUBST(PLATFORM_DIR)
 #--------------------------------------------------------------------
 
 AC_DEFINE(TCL_THREADS)
+#--------------------------------------------------------------------
+# Check whether --enable-threads or --disable-threads was given.
+# This auto-enables if Tcl was compiled threaded.
+#--------------------------------------------------------------------
+
+#TEA_ENABLE_THREADS
 
 #--------------------------------------------------------------------
 # The statement below defines a collection of symbols related to
@@ -248,11 +229,6 @@ AC_SUBST(itk_LIB_FILE)
 #--------------------------------------------------------------------
 
 TEA_PROG_TCLSH
-
-#--------------------------------------------------------------------
-# A wish shell is needed to run the test suite.
-#--------------------------------------------------------------------
-
 TEA_PROG_WISH
 
 #--------------------------------------------------------------------
