--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.25 2004/04/29 17:40:44 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.26 2004/09/21 22:52:03 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -207,7 +207,7 @@ crt = -MT$(DBGX)
 TCL_INCLUDES	= -I"$(TCLDIR)\include"
 TK_INCLUDES	= 
 !else
-TCL_INCLUDES	= -I"$(TCLDIR)\generic"
+TCL_INCLUDES	= -I"$(TCLDIR)\generic" -I"$(TCLDIR)\win"
 TK_INCLUDES	= -I"$(TKDIR)\generic" -I"$(TKDIR)\xlib"
 !endif
 
