--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.26 2004/09/21 22:52:03 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.27 2004/09/22 09:36:54 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -63,11 +63,11 @@ STUBPREFIX	= $(PROJECT)stub
 
 PKGINDEX	= "$(TMP_DIR)\pkgIndex.tcl"
 
-ITCLLIBNAME	= $(PROJECT)$(ITCL_VERSION)$(SUFX).$(EXT)
-ITCLLIB		= "$(OUT_DIR)\$(ITCLLIBNAME)"
-ITKIMPLIB	= "$(OUT_DIR)\$(PROJECT)$(ITCL_VERSION)$(SUFX).lib"
-ITKSTUBLIBNAME	= $(STUBPREFIX)$(ITCL_VERSION).lib
-ITKSTUBLIB	= "$(OUT_DIR)\$(ITCLSTUBLIBNAME)"
+ITCLLIBNAME	= itcl$(ITCL_VERSION)$(SUFX).$(EXT)
+ITCLLIB		= "$(ITCLDIR)\win\$(OUT_DIR)\$(ITCLLIBNAME)"
+ITKIMPLIB	= "$(OUT_DIR)\$(PROJECT)$(ITK_VERSION)$(SUFX).lib"
+ITKSTUBLIBNAME	= $(STUBPREFIX)$(ITK_VERSION).lib
+ITKSTUBLIB	= "$(OUT_DIR)\$(ITKSTUBLIBNAME)"
 
 !if $(TCL_DOES_STUBS)
 ITKLIBNAME	= $(PROJECT)$(ITK_VERSION)$(SUFX).$(EXT)
@@ -79,6 +79,7 @@ ITCLIMPLIBNAME	= itcl$(ITCL_VERSION)80$(SUFX).lib
 ITKLIB		= "$(OUT_DIR)\$(ITKLIBNAME)"
 ITCLIMPLIB	= "$(ITCLDIR)\win\Release\$(ITCLIMPLIBNAME)"
 
+
 !if $(TCLINSTALL)
 TKSTUBLIB	= "$(TCLDIR)\lib\tkstub$(TCL_VERSION).lib"
 TKIMPLIB	= "$(TCLDIR)\lib\tk$(TCL_VERSION)$(DBGX).lib"
@@ -86,8 +87,10 @@ WISH		= "$(TCLDIR)\bin\wish$(TCL_VERSION)$(DBGX).exe"
 !else
 TKSTUBLIB	= "$(TKDIR)\win\Release\tkstub$(TCL_VERSION).lib"
 TKIMPLIB	= "$(TKDIR)\win\$(OUT_DIR)\tk$(TCL_VERSION)$(DBGX).lib"
-WISH		= "$(TCLDIR)\win\$(OUT_DIR)\wish$(TCL_VERSION)$(DBGX).exe"
+WISH		= "$(TKDIR)\win\$(OUT_DIR)\wish$(TCL_VERSION)$(DBGX).exe"
 !endif
+ITCL_LIBRARY	= "$(ITCLDIR:\=/)/library"
+ITK_LIBRARY	= "$(ROOT)/library
 
 ITCLSTUBLIBNAME	= itclstub$(ITCL_VERSION).lib
 ITCLSTUBLIB	= "$(ITCLDIR)\win\Release\$(ITCLSTUBLIBNAME)"
@@ -98,9 +101,6 @@ TCLSTUBLIB	= $(TCLIMPLIB)
 TKSTUBLIB	= $(TKIMPLIB)
 ITCLSTUBLIB	= $(ITCLIMPLIB)
 !endif
-
-ITKSTUBLIBNAME = $(STUBPREFIX)$(ITK_VERSION).lib
-ITKSTUBLIB     = "$(OUT_DIR)\$(ITKSTUBLIBNAME)"
 
 
 BIN_INSTALL_DIR		= $(_INSTALLDIR)\bin
@@ -235,11 +235,20 @@ all :     setup $(ITKLIB) $(ITKSTUBLIB)
 release : setup $(ITKLIB) $(ITKSTUBLIB)
 install	: install-binaries install-docs
 
-test:	setup $(ITKLIB) $(ITKSTUBLIB) $(ITKWISH)
-	-@copy $(TCLDLL) $(TMPDIR)
-	-@copy $(TKDLL) $(TMPDIR)
-	-@copy $(ITCLDLL) $(TMPDIR)
-#	$(ITKWISH)
+!if $(STATIC_BUILD)
+test :
+	@echo test target not supported for a static library.
+!else
+test : setup $(ITKLIB) $(ITKSTUBLIB)
+	set TCL_LIBRARY=$(TCLDIR)\..\library
+	set TK_LIBRARY=$(TKDIR) library
+	set ITCL_LIBRARY=$(ITCL_LIBRARY)
+	set ITK_LIBRARY=$(ITK_LIBRARY)
+	$(TCLSH) ..\tests\all.tcl $(TESTFLAGS) -loadfile <<
+	load [file normalize $(ITCLLIB:\=/)] Itcl
+	load [file normalize $(ITKLIB:\=/)] Itk
+<<keep
+!endif
 
 setup :
 	@if not exist $(TMP_DIR)\nul mkdir $(TMP_DIR)
@@ -267,7 +276,7 @@ install-binaries:
 	if not exist "$(SCRIPT_INSTALL_DIR)" mkdir "$(SCRIPT_INSTALL_DIR)"
 	if not exist "$(INCLUDE_INSTALL_DIR)" mkdir "$(INCLUDE_INSTALL_DIR)"
 	copy $(ITKLIB) "$(SCRIPT_INSTALL_DIR)"
-!if "$(ITKSTUBLIB)" != ""
+!if $(ITKSTUBLIB) != ""
 	copy $(ITKSTUBLIB) "$(LIB_INSTALL_DIR)"
 !endif
 	copy $(ROOT)\generic\itk.h "$(INCLUDE_INSTALL_DIR)"
