--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.26 2004/11/11 17:13:21 davygrvy Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.27 2005/03/19 01:47:07 hobbs Exp $
 
 #========================================================================
 # The names of the source files is defined in the configure script.
@@ -169,7 +169,7 @@ CONFIG_CLEAN_FILES = Makefile
 
 CPPFLAGS	= @CPPFLAGS@
 LIBS		= @PKG_LIBS@ @LIBS@
-AR		= ar
+AR		= @AR@
 CFLAGS		= @CFLAGS@
 COMPILE		= $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 
