--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-# $Id: configure.in,v 1.38.2.1 2007/09/08 12:34:22 wiede Exp $
+# $Id: configure.in,v 1.38.2.2 2007/09/09 14:57:53 wiede Exp $
 
-AC_REVISION($Revision: 1.38.2.1 $)
+AC_REVISION($Revision: 1.38.2.2 $)
 AC_INIT([Itk],[4.0])
 AC_CONFIG_AUX_DIR(tclconfig)
 
@@ -9,6 +9,8 @@ TEA_PATH_TCLCONFIG
 TEA_LOAD_TCLCONFIG
 TEA_PATH_TKCONFIG
 TEA_LOAD_TKCONFIG
+TEA_PATH_TCLOOCONFIG
+TEA_LOAD_TCLOOCONFIG
 TEA_PATH_ITCLCONFIG
 TEA_LOAD_ITCLCONFIG
 TEA_PREFIX
@@ -25,6 +27,8 @@ TEA_ADD_STUB_SOURCES(itkStubLib.c)
 TEA_ADD_HEADERS([generic/itk.h generic/itkInt.h])
 TEA_ADD_INCLUDES([-I. -I\"`${CYGPATH} ${srcdir}/generic`\" -I\"`${CYGPATH} ${srcdir}/../itcl/generic`\"])
 TEA_PRIVATE_TCL_HEADERS
+TEA_PUBLIC_TCLOO_HEADERS
+TEA_PRIVATE_TCLOO_HEADERS
 TEA_ENABLE_THREADS
 TEA_ENABLE_SHARED
 TEA_ENABLE_SYMBOLS
