fixes to make the first version running the first example

--- a/tclGLMWFW/x11/Makefile
+++ b/tclGLMWFW/x11/Makefile
@@ -1,7 +1,7 @@
-PKG_OBJECTS = x11_base.o x11_window.o  x11_fullscreen.o x11_keysym2unicode.o x11_joystick.o x11_enable.o x11_glext.o x11_init.o x11_time.o
+PKG_OBJECTS = x11_base.o x11_window.o  x11_fullscreen.o x11_keysym2unicode.o x11_joystick.o x11_enable.o x11_glext.o x11_init.o x11_time.o dummy.o
 PKG_STUB_OBJECTS= 
 PKG_HEADERS= x11/platform.h
-PKG_LIB_FILE=libTclGLMWFWX11.0.1.so
+PKG_LIB_FILE=libTclGLMWFWX.0.1.so
 PKG_STUB_LIB_FILE=
 
 SHELL=/bin/sh
@@ -17,7 +17,7 @@ INSTALL=/usr/bin/install -c
 INSTALL_PROGRAM=${INSTALL}
 INSTALL_DATA=${INSTALL} -m 644
 INSTALL_SCRIPT=${INSTALL}
-PACKAGE_NAME=TclGLMWFWX11
+PACKAGE_NAME=TclGLMWFWX
 PACKAGE_VERSION=0.1
 CC=gcc
 CFLAGS_DEFAULT=-g -DTCL_MEM_DEBUG
@@ -45,7 +45,7 @@ TCL_SRC_DIR=/home/arnulf/SOURCES/tclOO/head				     TCL_BIN_DIR=/home/arnulf/SOU
 TCLSH_PROGRAM=/home/arnulf/SOURCES/tclOO/head/unix/tclsh
 INCLUDES= -I. -I"./generic" -I"/home/arnulf/SOURCES/tclOO/head/generic" -I"/unix"
 EXTRA_CFLAGS=
-DEFS=-DPACKAGE_NAME=\"tclGLMWFWX11\" -DPACKAGE_TARNAME=\"tclGLMWFWX11\" -DPACKAGE_VERSION=\"0.1\" -DPACKAGE_STRING=\"TclGLMWFWX11\ 0.1\" -DPACKAGE_BUGREPORT=\"\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LIMITS_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DTCL_THREADS=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_TYPE=long\ long -DHAVE_STRUCT_STAT64=1 -DHAVE_OPEN64=1 -DHAVE_LSEEK64=1 -DHAVE_TYPE_OFF64_T=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_TYPE=long\ long -DHAVE_STRUCT_STAT64=1 -DHAVE_OPEN64=1 -DHAVE_LSEEK64=1 -DHAVE_TYPE_OFF64_T=1 -DUSE_TCL_STUBS=1 -DBUILD_itcl=1  $(EXTRA_CFLAGS)
+DEFS=-DPACKAGE_NAME=\"tclGLMWFWX\" -DPACKAGE_TARNAME=\"tclGLMWFWX\" -DPACKAGE_VERSION=\"0.1\" -DPACKAGE_STRING=\"TclGLMWFWX\ 0.1\" -DPACKAGE_BUGREPORT=\"\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_LIMITS_H=1 -DHAVE_SYS_PARAM_H=1 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DTCL_THREADS=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_TYPE=long\ long -DHAVE_STRUCT_STAT64=1 -DHAVE_OPEN64=1 -DHAVE_LSEEK64=1 -DHAVE_TYPE_OFF64_T=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_TYPE=long\ long -DHAVE_STRUCT_STAT64=1 -DHAVE_OPEN64=1 -DHAVE_LSEEK64=1 -DHAVE_TYPE_OFF64_T=1 -DUSE_TCL_STUBS=1 -DBUILD_itcl=1  $(EXTRA_CFLAGS)
 CPPFLAGS=
 LIBS=  -lieee -lm
 AR=ar
@@ -155,6 +155,8 @@ x11_glext.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
 x11_init.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
 
 x11_time.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
+
+dummy.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
 
 
 
