--- a/tclGLMWFW/x11/Makefile
+++ b/tclGLMWFW/x11/Makefile
@@ -1,4 +1,5 @@
-PKG_OBJECTS = x11_base.o x11_window.o  x11_fullscreen.o x11_keysym2unicode.o x11_joystick.o x11_enable.o x11_glext.o x11_init.o x11_time.o dummy.o
+PKG_OBJECTS = x11_base.o x11_window.o  x11_fullscreen.o x11_keysym2unicode.o \
+    x11_joystick.o x11_enable.o x11_glext.o x11_init.o x11_time.o
 PKG_STUB_OBJECTS= 
 PKG_HEADERS= x11/platform.h
 PKG_LIB_FILE=libTclGLMWFWX.0.1.so
@@ -155,9 +156,6 @@ x11_glext.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
 x11_init.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
 
 x11_time.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
-
-dummy.o: $(GENERIC_DIR)/tclGLMWFWInt.h $(GENERIC_DIR)/tclGLMWFW.h platform.h
-
 
 
 #========================================================================
