--- a/glmwfwx11/Makefile.in
+++ b/glmwfwx11/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.1.2.1 2007/11/02 15:53:09 wiede Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.1.2.2 2007/11/02 16:19:18 wiede Exp $
 
 #========================================================================
 # Add additional lines to handle any additional AC_SUBST cases that
@@ -419,7 +419,7 @@ pkgIndex.tcl: Makefile
 	@( \
 	echo 'if {[catch {package present Tcl $(TCL_VERSION_REQ)}]} return'; \
 	echo 'package ifneeded $(PACKAGE_NAME) $(PACKAGE_VERSION) \
-	    [list load [file join $$dir $(PKG_LIB_FILE)] Itcl] ';  \
+	    [list load [file join $$dir $(PKG_LIB_FILE)] GlmwfwX11] ';  \
 	) > pkgIndex.tcl
 
 Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
