--- a/glmwfwwin32/pkgIndex.tcl.in
+++ b/glmwfwwin32/pkgIndex.tcl.in
@@ -1,5 +1,2 @@
-#
-# Tcl package index file
-#
-package ifneeded glmwfwx11 @PACKAGE_VERSION@ \
-    [list load [file join $dir @PKG_LIB_FILE@] @PACKAGE_NAME@]
+if {[catch {package present Tcl }]} return
+package ifneeded GlmwfwWin32 0.1  [list load [file join $dir libGlmwfwWin32.1.so] GlmwfwWin32] 
