--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -5,7 +5,7 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 1993-1998 Lucent Technologies, Inc.
-# RCS: $Id: makefile.vc,v 1.30 2007/11/03 17:57:16 davygrvy Exp $
+# RCS: $Id: makefile.vc,v 1.31 2007/11/05 22:35:17 davygrvy Exp $
 #------------------------------------------------------------------------------
 #  Do not modify this file!
 #------------------------------------------------------------------------------
@@ -83,18 +83,20 @@ ITCLIMPLIB	= "$(ITCLDIR)\win\Release\$(ITCLIMPLIBNAME)"
 !if $(TCLINSTALL)
 TKSTUBLIB	= "$(TCLDIR)\lib\tkstub$(TCL_VERSION).lib"
 TKIMPLIB	= "$(TCLDIR)\lib\tk$(TCL_VERSION)$(DBGX).lib"
+TKLIB		= "$(TCLDIR)\bin\tk$(TCL_VERSION)$(DBGX).dll"
 WISH		= "$(TCLDIR)\bin\wish$(TCL_VERSION)$(DBGX).exe"
 TCL_LIBRARY	= 
 TK_LIBRARY	= 
 !else
 TKSTUBLIB	= "$(TKDIR)\win\Release\tkstub$(TCL_VERSION).lib"
 TKIMPLIB	= "$(TKDIR)\win\$(OUT_DIR)\tk$(TCL_VERSION)$(DBGX).lib"
+TKLIB		= "$(TKDIR)\win\$(OUT_DIR)\tk$(TCL_VERSION)$(DBGX).dll"
 WISH		= "$(TKDIR)\win\$(OUT_DIR)\wish$(TCL_VERSION)$(DBGX).exe"
 TCL_LIBRARY	= "$(TCLDIR)\library"
 TK_LIBRARY	= "$(TKDIR)\library"
 !endif
 ITCL_LIBRARY	= "$(ITCLDIR:\=/)/library"
-ITK_LIBRARY	= "$(ROOT)/library
+ITK_LIBRARY	= "$(ROOT)/library"
 
 ITCLSTUBLIBNAME	= itclstub$(ITCL_VERSION).lib
 ITCLSTUBLIB	= "$(ITCLDIR)\win\Release\$(ITCLSTUBLIBNAME)"
@@ -244,12 +246,12 @@ test :
 	@echo test target not supported for a static library.
 !else
 test : setup $(ITKLIB) $(ITKSTUBLIB)
-	set TCL_LIBRARY=$(TCL_LIBRARY)
-	set TK_LIBRARY=$(TK_LIBRARY)
-	set ITCL_LIBRARY=$(ITCL_LIBRARY)
-	set ITK_LIBRARY=$(ITK_LIBRARY)
 	$(TCLSH) ..\tests\all.tcl $(TESTFLAGS) -loadfile <<
+	set env(TK_LIBRARY) $(TK_LIBRARY:\=/)
+	set env(ITCL_LIBRARY) [file normalize $(ITCL_LIBRARY:\=/)]
+	set env(ITK_LIBRARY) [file normalize $(ITK_LIBRARY:\=/)]
 	load [file normalize $(ITCLLIB:\=/)] Itcl
+	load [file normalize $(TKLIB:\=/)] Tk
 	load [file normalize $(ITKLIB:\=/)] Itk
 <<
 !endif
