--- a/ntkWidget/pkgIndex.tcl.in
+++ b/ntkWidget/pkgIndex.tcl.in
@@ -1,2 +1,2 @@
 if {[catch {package present Tcl }]} return
-package ifneeded ntkGLWidget 0.1  [list load [file join $dir libntkGLWidget0.1.so] ntkGLWidget] 
+package ifneeded ntkWidget 0.1  [list load [file join $dir libntkWidget0.1.so] ntkWidget] 
