no longer needed renaming

--- a/tclGLMWFW/x11/Makefile
+++ b/tclGLMWFW/x11/Makefile
@@ -38,8 +38,8 @@ RANLIB=:
 RANLIB_STUB=:
 SHLIB_CFLAGS=-fPIC
 SHLIB_LD=${CC} -shared ${CFLAGS} ${LDFLAGS_DEFAULT}
-SHLIB_LD_LIBS=${LIBS} /home/arnulf/SOURCES/tclOO/itcl-ng/itk/ntk/library/glfw/lib/x11/libglfw.a -L/home/arnulf/SOURCES/tclOO/head/unix -ltclstub8.5 \
--L/usr/X11/lib -lGLU -lGL -lX11 -lXrandr -pthread -lm
+SHLIB_LD_LIBS=${LIBS}  -L/home/arnulf/SOURCES/tclOO/head/unix -ltclstub8.5 \
+-L/usr/X11/lib -lGLU -lGL -lX11 -lXrandr -lm
 STLIB_LD=${AR} cr
 TCL_SRC_DIR=/home/arnulf/SOURCES/tclOO/head				     TCL_BIN_DIR=/home/arnulf/SOURCES/tclOO/head/unix
 # Not actually used, but can help when tracing errors			   TCL_LIBS=${DL_LIBS} ${LIBS} ${MATH_LIBS}
